SLING-12651: avoid re-assignment of resolveMapsMap